[tool.poetry]
name = "hcnotify"
version = "0.1.0"
description = ""
authors = ["Rem"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"

[tool.poetry.scripts]
hcnotify = "hcnotify.hcnotify:event_loop"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
